[bdist_wheel]
universal = 1

[metadata]
name = alignak
summary = Alignak is a monitoring framework compatible with Nagios configuration and plugins
author = Alignak Team
author_email = contact@alignak.net
home-page = http://alignak.net
license = GNU Affero General Public License
url = https://github.com/Alignak-monitoring/alignak
description-file = README.rst
download_url = https://github.com/Alignak-monitoring/alignak/archive/master.tar.gz
classifiers = Development Status :: 5 - Production/Stable
              Topic :: System :: Monitoring
              Topic :: System :: Networking :: Monitoring

[files]
data_files =
    etc/alignak = etc/*

[entry_points]
console_scripts =
    alignak-environment = alignak.bin.alignak_environment:main
    alignak-arbiter = alignak.bin.alignak_arbiter:main
    alignak-broker = alignak.bin.alignak_broker:main
    alignak-receiver = alignak.bin.alignak_receiver:main
    alignak-reactionner = alignak.bin.alignak_reactionner:main
    alignak-poller = alignak.bin.alignak_poller:main
    alignak-scheduler = alignak.bin.alignak_scheduler:main

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
